syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

package storage;

message KubernetesEvent {
    enum APIVerb {
        UNKNOWN = 0;
        CREATE  = 1;
        // Other valid actions are GET, UPDATE, PATCH, DELETE, PROXY, LIST, WATCH.
    }

    message Object {
        // Resource and sub-resource mapping is represented as resource_subresource.
        enum Resource {
            UNKNOWN          = 0;
            PODS_EXEC        = 1;
            PODS_PORTFORWARD = 2;
        }

        string   name       = 1;
        Resource resource   = 2 [(gogoproto.moretags) = "policy:\"Kubernetes Resource\""];
        string   cluster_id = 3;
        string   namespace  = 4;
    }

    string                    id                    = 1;
    Object                    object                = 2;
    google.protobuf.Timestamp timestamp             = 3;
    APIVerb                   api_verb              = 4 [(gogoproto.moretags) = "policy:\"Kubernetes API Verb\""];
    oneof ObjectArgs {
        PodExecArgs           pod_exec_args         = 5;
        PodPortForwardArgs    pod_port_forward_args = 6;
    }

    message PodExecArgs {
        string          container = 1;
        repeated string commands   = 2;
    }

    message PodPortForwardArgs {
        repeated int32 ports = 1;
    }
}
